macro (build arg)
	# Add headers to sources to enable file browsing in IDEs
	include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../tests")
	add_executable("Sqlpp11Example${arg}" "${arg}.cpp" ${sqlpp_headers} "${CMAKE_CURRENT_SOURCE_DIR}/../tests/MockDb.h" "${CMAKE_CURRENT_LIST_DIR}/Sample.h")
	add_test("${arg}" "Sqlpp11Example${arg}")
endmacro ()

build(insert)
build(update)
build(remove)
build(select)
find_package(Boost 1.50)
if(Boost_FOUND)
	include_directories(${Boost_INCLUDE_DIRS})
	build(ppgen)
endif()
