macro(build arg)
	# Add headers to sources to enable file browsing in IDEs
	add_executable("Sqlpp11Example${arg}" "${arg}.cpp" ${sqlpp_headers} "${CMAKE_CURRENT_SOURCE_DIR}/../tests/MockDb.h" "${CMAKE_CURRENT_LIST_DIR}/Sample.h")
	add_test("${arg}" "Sqlpp11Example${arg}")
	target_include_directories("Sqlpp11Example${arg}" PRIVATE ../tests)
	target_link_libraries("Sqlpp11Example${arg}" sqlpp11)
endmacro()

build(insert)
build(update)
build(remove)
build(select)
find_package(Boost 1.50)
if(Boost_FOUND)
	build(ppgen)
	target_include_directories("Sqlpp11Exampleppgen" PRIVATE ${Boost_INCLUDE_DIRS})
endif()
